GNOME Bugzilla – Bug 747319
hlssink: Doesn't write ENDLIST marker on EOS
Last modified: 2015-04-04 14:24:23 UTC
A video gives me 811 keyframes but after converting it to hls segments, I'm getting only 807 keyframes. # generate keyframes from the original video: gst-launch-1.0 uridecodebin uri=http://mirror.cessen.com/blender.org/peach/trailer/trailer_iphone.m4v ! "video/x-raw" ! jpegenc ! multifilesink # conver to hls: gst-launch-1.0 -v uridecodebin uri=http://mirror.cessen.com/blender.org/peach/trailer/trailer_iphone.m4v name=decbin ! video/x-raw ! x264enc ! mpegtsmux name=muxer ! hlssink target-duration=10 decbin. ! audioconvert ! audio/x-raw ! voaacenc ! aacparse ! muxer. # generate keyframes from gst-launch-1.0 uridecodebin uri=playlist.m3u8 ! "video/x-raw" ! jpegenc ! multifilesink
The problem was actually on the playback side because hlssink doesn't write the ENDLIST marker. This fixes it. commit 75c9a5f129b76458a24e188f39b201dcd3de0159 Author: Thiago Santos <thiagoss@osg.samsung.com> Date: Sat Apr 4 10:56:56 2015 -0300 hlssink: write the playlist end marker on EOS Catch EOS from the multifilesink and add the endlist marker to the playlist when it happens https://bugzilla.gnome.org/show_bug.cgi?id=747319